recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:7: error: not found: value pentaKch
    pentaKch(levels-1 , length/0.4)
    ^