recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {if(levels == 0){
  avance(length)
  return
    
  }
  else{
    pentaKch(levels-1 , length/0.4)
    gauche(54)
    pentaKoch(levels-1 , length/0.4)
    droite(36)
    pentaKoch(levels-1 , length/0.4)
    droite(36)
    pentaKoch(levels-1 , length/0.4)
    droite(36)
    pentaKoch(levels-1 , length/0.4)
    gauche(54)
	}
}